# K5

./: CMakeLists.txt  Task.cpp  Task.h  TaskList.cpp  TaskList.h  main.cpp  upravlenie_zadachami — ярлык.lnk  анализ и рекомендации.docx
